# WSL-Image-Clipboard-Helper

./: README.md
docs/: architecture_by_codex.md  rust-refactor-v3-v4.md
rust/: Cargo.toml  app.manifest  build.rs  wsl_clipboard.toml
rust/.cargo/: config.toml
rust/src/: cleanup.rs  clipboard.rs  config.rs  hotkey.rs  image_saver.rs  main.rs  paste.rs  tray.rs
scripts/: exit-all.ps1  save-and-set-attachment.ps1  save-clipboard-image.ps1  set-clipboard-attachment.ps1  wsl_clipboard.ahk  wsl_clipboard.ini
wsl_clipboard/: wsl_clipboard.toml
